--- a/src/main/webapp/WEB-INF/views/templates/admin/application/list.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/application/list.vm
@@ -72,7 +72,7 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-8 col-sm-offset-4">
-                  <button class="btn btn-success querApi" type="button"><i class="fa fa-check"></i>
+                  <button class="btn btn-success queryApplication" type="button"><i class="fa fa-check"></i>
                     查询</span></button>
                   <button class="btn btn-default reset" type="button"><i class="fa fa-times"></i> 重置
                   </button>
@@ -83,15 +83,15 @@
           <!-- Data Area -->
         </div>
         <div class="panel-body">
-          <table id="apiList" class="table table-striped table-bordered table-hover" width="100%">
+          <table id="applicationList" class="table table-striped table-bordered table-hover" width="100%">
             <thead>
             <tr>
               <th>Name</th>
-              <th>Request Host</th>
-              <th>Request Path</th>
-              <th>Upstream Url</th>
-              <th>Preserve Host</th>
-              <th>Strip Request Path</th>
+              <th>Client Id</th>
+              <th>Client Secret</th>
+              <th>Consumer Id</th>
+              <th>Redirect Uri</th>
+              <th>Created At</th>
               <th>Operation</th>
             </tr>
             </thead>
@@ -113,10 +113,6 @@
 <script src="${rc.contextPath}/assets/vendor/select2/select2.min.js"></script>
 <script src="${rc.contextPath}/assets/vendor/select2/select2_locale_zh-CN.js"></script>
 <script type="text/javascript">
-  $(".consumerId").select2({
-    placeholder: "请选择你想查询的开发者",
-    allowClear: true
-  });
   var TableHelper = function() {
     var loading = function(setting) {
       console.log($("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''));
@@ -147,18 +143,17 @@
         data: setting["data"],
         columns: [
           { data : "name"},
-          { data : "request_host"},
-          { data : "request_path"},
-          { data : "upstream_url"},
-          { data : "preserve_host"},
-          { data : "strip_request_path"},
+          { data : "client_id"},
+          { data : "client_secret"},
+          { data : "consumer_id"},
+          { data : "redirect_uri"},
+          { data : "created_at"},
           { data : "id"}
         ],
         "columnDefs": [{
           "render": function (data, type, row) {
-            return "<a href='$!{rc.contextPath}/admin/api/edit/" + data + "'>编辑</a>"
-                + " <a onclick='deleteApi(\"" + data + "\")'>删除</a> <a onclick='"
-                + "swal({title: \"你访问的页面被吃了哦 !\", text:\"_(:з」∠)_\",type: \"error\"})" + "'>插件</a>";
+            return "<a href='$!{rc.contextPath}/admin/application/edit/" + data + "'>编辑</a>"
+                + " <a onclick='deleteApplication(\"" + data + "\")'>删除</a>";
           },
           targets: 6
         }]
@@ -171,4 +166,52 @@
       }
     };
   }();
+
+  function deleteApplication(applicationId) {
+    console.log("Delete " + applicationId);
+    swal({
+      title: "是否删除该应用 ?",
+      type: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#DD6B55",
+      confirmButtonText: "删除",
+      cancelButtonText: "取消",
+      closeOnConfirm: false,
+      closeOnCancel: true
+    }, function (confirm) {
+      if (confirm) {
+        $.ajax("$!{rc.contextPath}/admin/application/delete/" + applicationId, {
+          complete: function () {
+            swal({
+              title: "删除成功 !",
+              type: "success"
+            }, function () {
+              location.reload();
+            });
+          }
+        });
+      }
+    });
+  }
+
+  $(document).ready(function() {
+    var setting = {
+      formId: "applicationForm",
+      tableId: "applicationList",
+      dataTable: $("#applicationList").DataTable(),
+      tableHeader: $("#applicationList").html()
+    };
+    TableHelper.init(setting);
+    $(".consumerId").select2({
+      placeholder: "请选择你想查询的开发者",
+      allowClear: true
+    });
+    $("button.queryApplication").on("click", function() {
+      console.log("Reload Application");
+      TableHelper.init(setting);
+    });
+    $(".reset").on("click", function () {
+      location.reload();
+    });
+  });
 </script>
