--- a/src/main/webapp/WEB-INF/views/templates/admin/plugin/list.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/plugin/list.vm
@@ -2,4 +2,199 @@
 #set( $parentMenu = "plugin" )
 #set( $menuName = "listPlugin" )
 
+#set( $pageStyles = [
+  "/assets/vendor/select2/select2.css",
+  "/assets/vendor/select2/select2-bootstrap.css",
+  "/assets/vendor/datatables/css/dataTables.bootstrap.min.css",
+  "/assets/vendor/sweetalert/sweet-alert.css"
+])
+
 #breadCrumb( "插件管理", "查找, 管理, 编辑 API 的插件配置")
+
+<div class="content animate-panel">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="hpanel">
+        <div class="panel-heading hbuilt">
+          <div class="panel-tools">
+            <a class="showhide"><i class="fa fa-chevron-up"></i></a>
+            <a class="closebox"><i class="fa fa-times"></i></a>
+          </div>
+          插件信息
+        </div>
+        <div class="panel-body">
+          <!-- Search Area -->
+          <div class="row">
+            <form id="applicationForm" action="${rc.contextPath}/admin/plugin/list" class="form" method="post">
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">插件列表</label>
+                <div class="col-sm-9">
+                  #if( ${pluginList} )
+                  <select class="pluginSelect form-control" name="name">
+                    <option></option>
+                    #foreach( ${plugin} in ${pluginList} )
+                    <option value="$!{plugin}">$!{plugin}</option>
+                    #end
+                  </select>
+                  #else
+                  找不到 Kong 上启用的插件信息, 请刷新页面重试, 或者修改配置文件.
+                  #end
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">API 列表</label>
+                <div class="col-sm-9">
+                  #if( ${apiList} )
+                  <select class="apiSelect form-control" name="api_id">
+                    <option></option>
+                    #foreach( ${api} in ${apiList} )
+                    <option value="$!{api.id}">$!{api.name}</option>
+                    #end
+                  </select>
+                  #else
+                  找不到 API 信息, 请刷新页面重试, 或者添加 API.
+                  #end
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-8 col-sm-offset-4">
+                  <button class="btn btn-success queryApplication" type="button"><i class="fa fa-check"></i>
+                    查询</span></button>
+                  <button class="btn btn-default reset" type="button"><i class="fa fa-times"></i> 重置</button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- Data Area -->
+        </div>
+        <div class="panel-body">
+          <table id="applicationList" class="table table-striped table-bordered table-hover" width="100%">
+            <thead>
+            <tr>
+              <th>Name</th>
+              <th>API Id</th>
+              <th>Enabled</th>
+              <th>Created At</th>
+              <th>Operation</th>
+            </tr>
+            </thead>
+          </table>
+        </div>
+        <div class="panel-footer">
+          &nbsp;
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="${rc.contextPath}/assets/vendor/sweetalert/sweet-alert.min.js"></script>
+<!-- Datatable Vendor -->
+<script src="${rc.contextPath}/assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/datatables/js/dataTables.bootstrap.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/jquery.serializejson.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/select2/select2.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/select2/select2_locale_zh-CN.js"></script>
+<script type="text/javascript">
+  var TableHelper = function () {
+    var loading = function (setting) {
+      console.log($("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''));
+      var form = $("#" + setting["formId"]);
+      $.ajax($("#" + setting["formId"]).attr("action"), {
+        data: $("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''),
+        method: "post",
+        success: function (data) {
+          setting["data"] = data;
+          console.log(data);
+          tableRender(setting);
+        },
+        error: function () {
+          swal({
+            title: "加载失败 !",
+            text: "请检查页面重新提交 !",
+            type: "warning"
+          });
+        }
+      });
+    };
+
+    var tableRender = function (setting) {
+      setting["dataTable"].destroy();
+      $("#" + setting["tableId"]).html(setting["tableHeader"]);
+      setting["dataTable"] = $("#" + setting["tableId"]).DataTable({
+        fixedHeader: true,
+        data: setting["data"],
+        columns: [
+          {data: "name"},
+          {data: "api_id"},
+          {data: "enabled"},
+          {data: "created_at"},
+          {data: "id"}
+        ],
+        "columnDefs": [{
+          "render": function (data, type, row) {
+            return "<a href='$!{rc.contextPath}/admin/api/" + row["api_id"] + "/plugin/" + row["name"] + "'>编辑</a>"
+                + " <a onclick='deleteApplication(\"" + data + "\")'>删除</a>";
+          },
+          targets: 4
+        }]
+      });
+    };
+
+    return {
+      init: function (setting) {
+        loading(setting);
+      }
+    };
+  }();
+
+  function deleteApplication(applicationId) {
+    console.log("Delete " + applicationId);
+    swal({
+      title: "是否删除该插件 ?",
+      type: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#DD6B55",
+      confirmButtonText: "删除",
+      cancelButtonText: "取消",
+      closeOnConfirm: false,
+      closeOnCancel: true
+    }, function (confirm) {
+      if (confirm) {
+        $.ajax("$!{rc.contextPath}/admin/plugin/delete/" + applicationId, {
+          complete: function () {
+            swal({
+              title: "删除成功 !",
+              type: "success"
+            }, function () {
+              location.reload();
+            });
+          }
+        });
+      }
+    });
+  }
+
+  $(document).ready(function () {
+    var setting = {
+      formId: "applicationForm",
+      tableId: "applicationList",
+      dataTable: $("#applicationList").DataTable(),
+      tableHeader: $("#applicationList").html()
+    };
+    TableHelper.init(setting);
+    $(".consumerId").select2({
+      placeholder: "请选择你想查询的开发者",
+      allowClear: true
+    });
+    $("button.queryApplication").on("click", function () {
+      console.log("Reload Application");
+      TableHelper.init(setting);
+    });
+    $(".reset").on("click", function () {
+      location.reload();
+    });
+  });
+</script>
